# Boars_Project

./: .gitignore  README.md  annotation.py  ca_calculations.py  data_parsing.py  infostop_calculation.py  laws_params.py  requirements.txt
compare_models/: .gitignore  README.md  pyproject.toml
compare_models/docs/: search.js  src.html
compare_models/docs/src/: comparator.html  config_manager.html  data_loader.html  epr_trajectory.html  file_manager.html  geo_processor.html  levy_flight_trajectory.html  logger.html  random_walk_trajectory.html  trajectory_processor.html  trajectory_simulator.html  utils.html
compare_models/levy_flight/: levy_flight.py  utility_random_walk.py
compare_models/randomwalk/: README.md
compare_models/randomwalk/src/: walkers.py
compare_models/src/: comparator.py  config.yaml  config_manager.py  data_loader.py  epr_trajectory.py  file_manager.py  geo_processor.py  levy_flight_trajectory.py  logger.py  random_walk_trajectory.py  sts_epr_trajecotry.py  trajectory_processor.py  trajectory_simulator.py  utils.py
constans/: cols.json  const.py  periods.json
docs/: search.js  src.html
model/: .coveragerc  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
model/docs/: index.html  search.js  src.html  utils.html
model/docs/src/: EPR.html  agent.html  gravity.html  markov_chain.html
model/docs/utils/: utils.html
model/src/: EPR.py  agent.py  gravity.py  markov_chain.py
model/tests/: test_ditras.py  test_epr.py  test_gravity.py  test_markov_chain.py  test_utils.py
model/utils/: utils.py
(+32 files in other folders)
