[project]
name = "boars-project-models"
version = "0.1.0"
description = ""
authors = [
    {name = "",email = "test@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pydantic (==2.11.7)",
    "powerlaw (==1.5)",
    "rasterio (==1.4.3)",
    "rasterstats (==0.20.0)",
    "python-box (==7.3.2)",
    "pyyaml (==6.0.2)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "humobi (==0.1.17)",
    "pdoc (>=15.0.4,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
